Fix front page layout shift

--- a/app/styles/front.css
+++ b/app/styles/front.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   column-gap: var(--s-4);
   font-size: 13px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 100px);
   row-gap: var(--s-4);
 }
 
